--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div class="header">
+        <h1>Blogpost</h1>
+    </div>
     <div class="container">
         <h1>Aca el titulo del post</h1>
 
