--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     <div class="header">
-        <h1>Blogpost</h1>
+        <ul>
+            <li><b>Blogpost</b></li>
+            <li>Home</li>
+            <li>About</li>
+            <li>Contact</li>
+        </ul>
     </div>
     <div class="container">
         <h1>Aca el titulo del post</h1>
