--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
     <div class="container">
         <h1>Aca el titulo del post</h1>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, exercitationem tempore! Ullam laudantium autem cumque quia, culpa quam, alias omnis voluptates reprehenderit quas facere fuga quidem quaerat odit illo minima commodi corporis.</p>
+    <div class="flex">
+        <img src="img/img.jpg" width="200px" alt="" srcset="">
+        <p>&nbsp;&nbsp;&nbsp;&nbsp;Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, exercitationem tempore! Ullam laudantium autem cumque quia, culpa quam, alias omnis voluptates reprehenderit quas facere fuga quidem quaerat odit illo minima commodi corporis.</p>
+    </div>
 
     <b>Debería estar en el siguiente commit</b>
     </div>
