--- a/index.html
+++ b/index.html
@@ -26,5 +26,10 @@
 
     <b>Debería estar en el siguiente commit</b>
     </div>
+    <footer>
+        <div>
+            <p>Follow us  <a href="">🐵  🌓  🚗</a> - &copy; Copyright 2020</p>
+        </div>
+    </footer>
 </body>
 </html>
