--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </ul>
     </div>
     <div class="container">
-        <h1>Aca el titulo del post</h1>
+        <h1>Acá el título del post</h1>
 
     <div class="flex">
         <img src="img/img.jpg" width="200px" alt="" srcset="">
